Login page pading fixed active status visibility fixed

--- a/Src/FrontEnd/src/app/app.component.css
+++ b/Src/FrontEnd/src/app/app.component.css
@@ -1,5 +1,4 @@
-.main-content {
-}
+
 
 .main-content {
   transition: margin-left 0.3s ease;
